--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,30 @@
 <html>
    
 <head>
-  <link rel = "stylesheet" type = "text/css" href = "https://replit.com/@JinhongChen1/Savetheworld('static',filename = 'style.css')">
+  <style>
+      body {
+        background-color: lightseagreen;
+      }
+    </style>
+  <link rel = "stylesheet" type="text/css" href =  'style.css')">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--    <script src="script.js"></script>  -->
    <meta charset= "utf-8" />
+  <style>
+    title {
+  font-size: 2em;
+}
+    </style>
     <title>Timetable</title>
   
     <style>
+      body {
+    background-image: url('https://scx1.b-cdn.net/csz/news/800/2017/theoreticala.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    
+}
         /* Style the table */
         table {
             border-collapse: collapse;
