--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,7 @@
 <html>
    
 <head>
-  <style>
-      body {
-        background-color: lightseagreen;
-      }
-    </style>
+  
   <link rel = "stylesheet" type="text/css" href =  'style.css')">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--    <script src="script.js"></script>  -->
@@ -20,7 +16,7 @@
   
     <style>
       body {
-    background-image: url('https://scx1.b-cdn.net/csz/news/800/2017/theoreticala.jpg');
+    background-image: url('https://hips.hearstapps.com/hmg-prod/images/cute-cat-photos-1593441022.jpg?crop=1.00xw:0.753xh;0,0.153xh&resize=1200:*');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -39,7 +35,7 @@
             text-align: center;
             padding: 5px;
             font-weight: normal;
-            background-color: skyblue;
+            background-color: peachpuff ;
         }
         
         /* Style the table cells */
@@ -54,7 +50,7 @@
         /* Style the first column */
         .time-column {
             font-weight: bold;
-            background-color: hotpink;
+            background-color: palegoldenrod;
         }
         
         /* Style the gridlines */
