--- a/templates/timetable_pdf.html
+++ b/templates/timetable_pdf.html
@@ -3,6 +3,13 @@
   <head>
     <title>Timetable PDF</title>
     <style>
+      body {
+    background-image: url('https://hips.hearstapps.com/hmg-prod/images/cute-cat-photos-1593441022.jpg?crop=1.00xw:0.753xh;0,0.153xh&resize=1200:*');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    
+}
       /* Style the table */
       table {
         border-collapse: collapse;
