Added an Easter Egg

--- a/templates/timetable_pdf.html
+++ b/templates/timetable_pdf.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      const keySequence = [];
+let konamiString = '';
+const konamiCode = [
+    'ArrowUp',
+    'ArrowUp',
+    'ArrowDown',
+    'ArrowDown',
+    'ArrowLeft',
+    'ArrowRight',
+    'ArrowLeft',
+    'ArrowRight',
+    'b',
+    'a'
+];
+
+document.addEventListener('keyup', function(e) {
+    keySequence.push(e.key);
+    keySequence.splice(
+        -konamiCode.length - 1, 
+        keySequence.length - konamiCode.length
+    );
+    konamiString = konamiCode.join('');
+
+    if (keySequence.join('').includes(konamiString)) {
+       setTimeout(function() {
+          window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+       }, 2000);
+    }
+});</script>
     <title>Timetable PDF</title>
     <style>
       body {
